<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ContactDetailActivity">




    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        android:paddingTop="50dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">


            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="59dp"
                android:layout_height="62dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/buttonPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_delete_all"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/contactImage"
                android:layout_width="97dp"
                android:layout_height="105dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/border"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/placeholder_image"
                tools:ignore="ContentDescription"
                android:focusable="true" />

            <EditText
                android:id="@+id/editContactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="56dp"
                android:layout_marginRight="20dp"

                android:background="@drawable/edittext_layout"
                android:hint="@string/enter_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contactImage"
                android:autofillHints="Enter Name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="48dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edittext_layout"
                android:hint="@string/enter_number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.609"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editContactName"
                app:layout_constraintVertical_bias="0.0"
                android:inputType="number"
                android:autofillHints="Enter number" />

            <Button
                android:id="@+id/updateContactButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_contacts"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.097"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editContactNumber"
                app:layout_constraintVertical_bias="0.708" />

            <Button
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:text="@string/share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.22"
                app:layout_constraintStart_toEndOf="@+id/updateContactButton"
                app:layout_constraintTop_toBottomOf="@+id/editContactNumber"
                app:layout_constraintVertical_bias="0.708" />

            <ImageButton
                android:id="@+id/callButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonPrimary"
                android:layout_marginTop="48dp"
                app:layout_constraintEnd_toStartOf="@+id/msgButton"
                app:layout_constraintHorizontal_bias="0.474"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editContactNumber"
                app:srcCompat="@drawable/ic_call"
                android:contentDescription="@string/content"/>

            <ImageButton
                android:id="@+id/msgButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonPrimary"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="64dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editContactNumber"
                app:srcCompat="@drawable/ic_message"
                android:contentDescription="@string/content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>